@@ -143,6 +143,8 @@ xx/xx/2005 - 2.0.0-WIP
 	  permissions that got lost during the move.  (Anton)
 	- ntfsresize: fix segfault during filesystem check if NTFS $Bitmap file
 	  size was larger than it should have been.  (Szaka)
+	- mkntfs: don't mark NTFS dirty if the backup boot sector could be
+	  successfully created (Szaka)
 
 04/09/2004 - 1.9.4 - Urgent bug fixes.
 
